feat: generate favicon response.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "deno.enable": true,
   "deno.unstable": true,
   "editor.inlayHints.enabled": "offUnlessPressed",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "denoland.vscode-deno"
 }
